--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,38 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Users</h1>
-    <div>
-        <table>
-            <tr>
-                {% for item in usersKeys %}
-                <th>{{item}}</th>
-                {% endfor %}
-            </tr>
-            {% for user in users %}
-            <tr>
-                {% for key in usersKeys %}
-                <td>{{user[loop.index0]}}</td>
-                {% endfor %}
-            </tr>
+    {% for tbl in tables %}
+    <h1>{{ tbl['tbName'] }}</h1>
+    <table border = 1>
+        <tr>
+            {% for key in tbl['keys'] %}
+            <th>{{ key }}</th>
             {% endfor %}
-        </table>
-    </div>
+        </tr>
+        {% for row in tbl['rows'] %}
+        <tr>
+            {% for key in tbl['keys'] %}
+            <td>{{ row[loop.index0] }}</td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </table>
+    {% endfor %}
 
-    <h1>Posts</h1>
-    <div>
-        <table>
-            <tr>
-                {% for item in postsKeys %}
-                <th>{{item}}</th>
-                {% endfor %}
-            </tr>
-            {% for post in posts %}
-            <tr>
-                {% for key in postsKeys %}
-                <td>{{post[loop.index0]}}</td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
 {% endblock %}
