--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,15 @@
         </ul>
         </div>
 
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+        {% for message in messages %}
+            <li>{{ message }} </li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         <hr>
         {% block content %}{% endblock %}
 
