Add table insertion for most tables. Clean up database access.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>{{title}} - Official Website</title>
+        <title>ACM@MichiganTech - {{title}}</title>
     </head>
     <body>
         <div>
         <ul>
-            <li style = "display:inline;">{{title}} :::: </li>
+            <li style = "display:inline;">ACM@MichiganTech - {{title}} :::: </li>
 
             {% for link in links %}
             <li style = "display:inline;">
