--- a/app/templates/newpost.html
+++ b/app/templates/newpost.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Create New User</h1>
-<form action="" method="post" name="login">
+<h1>Create New Post</h1>
+<form action="" method="post" name="post">
     {% for field in form %}
     <tr>
     {% if field.type == "BooleanField" %}
