--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,23 +1,67 @@
 <html>
     <head>
         <title>{{title}} - Official Website</title>
+
+        <!-- Bootstrap -->
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='cosmo.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='plugin/bxslider/jquery.bxslider.css') }}"></script>
+
+
+        <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+
     </head>
     <body>
-        <div>
-        <ul>
-            <li style = "display:inline;">{{title}} :::: </li>
+    <!-- Navbar -->
+    <div class="navbar-wrapper">
+        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
 
-            {% for link in links %}
-            <li style = "display:inline;">
-            <a href="{{link.viewName}}">{{link.title}}</a>
-            </li>
-            {% endfor %}
-        </ul>
+                    <a class="navbar-brand" href="#">
+                        <font color=#7BB9DF>ACM</font>@<font color=#FFCE00>MichiganTech</font>
+                    </a>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        {% for link in links %}
+                        <li id="{{link.view}}"><a href="{{link.view}}">{{link.title}}</a></li>
+                        {% endfor %}
+                    </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+
+                        <img src = "{{ url_for('static', filename='img/acmlogo.png') }}" id="acmlogo" width="75" height="75"> 
+                        <img src = "{{ url_for('static', filename='img/mtulogo.png') }}" id="mtulogo" width="240" height="46">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <hr>
+        <!-- Content -->
         {% block content %}{% endblock %}
+        <script>
+// Really shitty programming, #yolo
+        var active_link = "{{active}}"
+        </script>
 
-    </body>
-</html>
+        <!-- Outside JaverScripts (jQuery) -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+
+        <!-- Javerscripts (compiled from CoffeeScript -->
+        <script src="{{ url_for('static', filename='base.js') }}"></script>
+
+        <!-- jQuery Plugins -->
+        <script src="{{ url_for('static', filename='plugin/bxslider/jquery.bxslider.min.js') }}"></script>
+        </body>
+        </html>
 
